Fix a bus error on logout on -CURRENT if one of the panels contained a drawer.  This patch has been fed back to GNOME via Bugzilla.  More details can be found here:

http://bugzilla.gnome.org/show_bug.cgi?id=96423